--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
             //        console.log("window.navigator.language",window.navigator.language);
 
             if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
-                document.title = "小游戏：合成大西瓜";
+                document.title = "合成满汉2.1——刀刀干的好事";
             } else if (window.navigator.language == "zh-TW") {
-                document.title = "小遊戲：合成大西瓜";
+                document.title = "合成滿漢2.1——刀刀乾的好事";
             } else if (window.navigator.language == "zh-HK") {
-                document.title = "小遊戲：合成大西瓜";
+                document.title = "合成滿漢2.1——刀刀乾的好事";
             } else if (window.navigator.language == "ko-KR") {
                 document.title = "작은 놀이：큰 수박 을 합성 하 다";
             } else if (window.navigator.language == "ja-JP") {
