--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             if (window.navigator.language == "zh-CN" || window.navigator.language == "zh-cn") {
                 document.title = "合成满汉2.1——刀刀干的好事";
             } else if (window.navigator.language == "zh-TW") {
-                document.title = "合成滿漢2.1——刀刀乾的好事";
+                document.title = "合成滿漢2.1——刀刀幹的好事";
             } else if (window.navigator.language == "zh-HK") {
-                document.title = "合成滿漢2.1——刀刀乾的好事";
+                document.title = "合成滿漢2.1——刀刀幹的好事";
             } else if (window.navigator.language == "ko-KR") {
                 document.title = "작은 놀이：큰 수박 을 합성 하 다";
             } else if (window.navigator.language == "ja-JP") {
